Modificacion de la gramatica
Ahora aceptara operadores de comparacion como:
< | > | == | <= | >= | !=
Tendran mas prioridad que el operador assigment (=) pero menos
que ADDOP

--- a/README
+++ b/README
@@ -13,7 +13,9 @@ The translator conforms to the recursive predictive descendant technique.
 assignment   : comparison '=' assignment
              | comparison
 ;
-comparison   : 
+comparison   : comparison COMOP expression
+	     | expression
+;
 expression   : expression ADDOP term
              | term
 ;
@@ -27,7 +29,7 @@ factor       : NUMBER
 
 where:
 
-COMOP = /^<|>|<=|>=|==$/
+COMOP = /^<|>|<=|>=|==|!=$/
 ADDOP  = /^[-+]$/
 MULOP  = %r{^[*/]$}
 NUMBER = /^\d+$/
